# ClimatePilot

./: README.md
backend/: pyproject.toml
frontend/: components.json  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/components/: footer.tsx  header.tsx
frontend/src/pages/: hero.tsx  home.tsx  preview_label.tsx
frontend/src/pages/chatbot/: chatbot.tsx
frontend/src/pages/dashboard/: chart.tsx  dashboard.tsx  stat_card.tsx
frontend/src/style/: index.css
frontend/src/style/elements/: button.css  card.css  chart.css  ticker.css
frontend/src/style/main/: footer.css  header.css  hero.css  section.css
ml/: notebook.ipynb  pyproject.toml
ml/data/: clean.py  collect.py  data_path.py  split.py
ml/data/analysis/: correlation.py
ml/datasets/: climate_change.csv
ml/datasets/clean/: air_quality.csv
ml/datasets/raw/: air_quality.csv  climate_change.csv
ml/training/: training.py
